<resources>
    <string name="app_name">Lco Getpack</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashbord">DashbordActivity</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_offers">Offers</string>
    <string name="title_forums">Forums</string>
    <string name="title_settings">Settings</string>
</resources>
