<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lcogetpack.ui.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.lcogetpack.ui.ui.fragments.message.MessageFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.example.lcogetpack.ui.ui.fragments.offer.OffersFragment"
        android:label="@string/title_offers"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.lcogetpack.ui.ui.fragments.forums.ForumsFragment"
        android:label="@string/title_forums"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.lcogetpack.ui.ui.fragments.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_offer" />
</navigation>